packages/components/src/styles/components/advanced-table.scss
/* ... */
.hds-advanced-table__tbody {
  border-top: none;
  border-bottom-right-radius: inherit;
  border-bottom-left-radius: inherit;
}

// ----------------------------------------------------------------

// TABLE HEADER

.hds-advanced-table__thead {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: subgrid;

  .hds-advanced-table__tr {
    display: contents;

    .hds-advanced-table__th {
      position: relative;
      align-content: center;
      height: 100%;
      padding: $hds-advanced-table-cell-padding-medium;
      color: var(--token-color-foreground-strong);
      text-align: left;
      background-color: var(--token-color-surface-strong);

      &:focus,
      &.mock-focus {
        // the box shadow is 3px wide, so offsetting by 3px so the focus ring doesn't go outside the cell
        @include hds-focus-ring-with-pseudo-element(
          $top: 3px,
          $right: 3px,
          $bottom: 3px,
          $left: 3px,
          $radius: inherit,
          $position: sticky
        );
        z-index: 1;
        isolation: isolate;
      }
    }

    .hds-advanced-table__th-resize-handle {
      @include hds-focus-ring-with-pseudo-element($position: absolute);

      top: 0;
      right: 0;
      bottom: 0;
      z-index: 2;
      width: 24px;
      scroll-margin-right: 24px;
      scroll-margin-left: 24px;
      transform: translateX(12.5px); // (width of the handler (24px) + border width (1px)) / 2 == 12.5px
      cursor: col-resize;

      &::after {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        z-index: 2;
        content: "";
      }

      &:focus::after,
      &.mock-focus::after,
      &:hover::after,
      &.mock-hover::after,
      &.hds-advanced-table__th-resize-handle--resizing::after,
      &.mock-active::after {
        width: 3px;
        transform: translateX(-10.5px); // (width of the handle (24px) - width of the visual handle (3px)) / 2 == 10.5px
      }

      &:hover::after,
      &.mock-hover::after {
        background-color: $hds-advanced-table-border-resize-handle-hover-color;
      }

      &:focus::after,
      &.mock-focus::after,
      &.hds-advanced-table__th-resize-handle--resizing::after,
      &.mock-active::after {
        background-color: var(--token-color-palette-blue-300);
      }
    }

    // horizontal alignment

    .hds-advanced-table__th--align-center,
    .hds-advanced-table__td--align-center {
      text-align: center;

      .hds-advanced-table__th-content {
        justify-content: center;
      }
    }

    .hds-advanced-table__th--align-right,
    .hds-advanced-table__td--align-right {
      text-align: right;

      .hds-advanced-table__th-content {
        justify-content: flex-end;
      }
    }

    // sticky column

    .hds-advanced-table__th--is-sticky-column {
      position: sticky;
      // has a higher z-index than the sticky header content
      z-index: 7;
    }

    .hds-advanced-table__th--is-sticky-column-pinned {
      &:first-of-type {
        left: -1px;
        // add extra left border to offset -1px and the 0.5px border from the table container being gone
        border-left: calc(#{$hds-advanced-table-border-width} + 1px) solid $hds-advanced-table-border-color;
      }
    }

    // Only apply the thick border to the last sticky column
    .hds-advanced-table__th--is-sticky-column:not(:has(+ .hds-advanced-table__th--is-sticky-column)) {
      border-right: 3px solid $hds-advanced-table-border-color;
    }

    .hds-advanced-table__th--is-sticky-column.hds-advanced-table__th--is-selectable
      + .hds-advanced-table__th--is-sticky-column.hds-advanced-table__th--is-sticky-column-pinned {
      // If there is a select column the variable gets set to the width of the select column via inline styles on the grid
      left: var(--hds-advanced-table-sticky-column-offset, 0);
      border-left-width: $hds-advanced-table-border-width;
    }

    // border radius: target first and last th elements in the row
    &:first-of-type {
      .hds-advanced-table__th:first-child {
        border-top-left-radius: $hds-advanced-table-inner-border-radius;
      }

      .hds-advanced-table__th:last-child {
        border-top-right-radius: $hds-advanced-table-inner-border-radius;
      }
    }
  }

  // Resizable columns
  &.hds-advanced-table__thead--has-resizable-columns {
    .hds-advanced-table__th .hds-advanced-table__th-content-text {
      display: block;
      width: 100%;
      min-width: 30px;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }
  }

  // sticky header
  &.hds-advanced-table__thead--sticky {
    position: sticky;
    top: -1px;
    z-index: 5;
    background-color: var(--token-color-surface-strong);
    // need to subtract width of cell top border for default state, otherwise border of header+cell is 3.5px
    border-bottom: calc(3px - #{$hds-advanced-table-border-width} / 2) solid $hds-advanced-table-border-color;
  }

  &.hds-advanced-table__thead--is-pinned {
    background-color: var(--token-color-surface-strong);
    // need to add 1px to offset `top: -1px`
    border-top: calc(#{$hds-advanced-table-border-width} / 2 + 1px) solid $hds-advanced-table-border-color;
    border-bottom: 3px solid $hds-advanced-table-border-color;

    .hds-advanced-table__tr {
      &:first-of-type {
        .hds-advanced-table__th:first-child {
          border-top-left-radius: 0;
        }

        .hds-advanced-table__th:last-child {
          border-top-right-radius: 0;
        }
      }
    }
  }
}

// multi-select (isSelectable=true)
.hds-advanced-table__th-content {
  display: flex;
  flex-shrink: 1;
  gap: 8px;
  align-items: center;
  justify-content: flex-start;
  min-width: 0;
}
/* ... */

